# RestAPIProjekt

./: README.md
cURLProjekt/: CMakeLists.txt  CurlUtils.cpp  CurlUtils.h  Funktionsbeschreibung.docx  GoogleMapsAPI.cpp  GoogleMapsAPI.h  MainController.cpp  MainController.h  WeatherAPI.cpp  WeatherAPI.h  main.cpp  ~$schreibung der Funktion.docx
